--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,6 +10,11 @@
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}" href="/">Home</a>
+      <ul>
+        {% for post in site.posts limit: 5 %}
+        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+      </ul>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
