adds a post preview class to the post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,18 @@ layout: default
   {{ content }}
 </div>
 
+{% for post in site.posts limit:3 %}
+  <div class="post-preview">
+    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+    <div class="post-date">{{ post.date | date: "%B %d, %Y" }}</div>
+    {{ post.content | split:'<!--break-->' | first }}
+    {% if post.content contains '<!--break-->' %}
+      <a href="{{ post.url }}">read more</a>
+    {% endif %}
+  </div>
+  <hr>
+{% endfor %}
+
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
